--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,6 +56,21 @@ body {
   background-color: rgb(187, 183, 183);
 }
 
+.logoContainer {
+  padding-top: 50px;
+  color: white;
+  font-family: "Akshar", sans-serif;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: slide 1.1s;
+}
+.weatherLogo {
+  width: 250px;
+}
+
 .section {
   padding-top: 35px;
   opacity: 1;
@@ -96,4 +111,8 @@ body {
 .hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+.logoHidden {
+  display: none;
 }
